# descomplicita

./: .env.example  .gitignore  .pre-commit-config.yaml  BROWN-DISC-WORKFLOW-COMPLETE.md  PRD.md  README.md  ROADMAP.md  docker-compose.yml  railway.toml  vercel.json
backend/: .env.example  .railwayignore  Dockerfile  README.md  config.py  database.py  dependencies.py  error_codes.py  excel.py  filter.py  job_store.py  llm.py  main.py  pncp_client.py  pyproject.toml  railway.toml  rate_limit.py  requirements-dev.txt  requirements.txt  ruff.toml  schemas.py  schemas_contract.py  sectors.py  start.py  task_queue.py
backend/app_cache/: redis_cache.py
backend/auth/: __init__.py  jwt.py  supabase_auth.py
backend/cache/: redis_cache.py
backend/clients/: async_pncp_client.py
backend/examples/: pagination_example.py
backend/middleware/: auth.py  correlation_id.py  deprecation.py  security_headers.py
backend/routers/: auth.py  health.py  search.py
backend/scripts/: audit_all_sectors.json  audit_all_sectors.py  audit_all_sectors_report.md  audit_false_positives.py  audit_filter.py  audit_quality_gate.py  check_keyword_redundancy.py  coverage_report.md  load_test.py  metrics_report.md  migrate_sqlite_to_supabase.py  spike_palavrachave.py  spike_palavrachave_results.json
backend/services/: search_pipeline.py  term_parser.py
backend/sources/: ADDING_SOURCES.md  __init__.py  base.py  comprasgov_source.py  orchestrator.py  pncp_source.py  querido_diario_source.py  tce_rj_source.py  transparencia_source.py
backend/stores/: redis_job_store.py
backend/tests/: __init__.py  conftest.py  mock_helpers.py  test_auth_consolidation.py  test_cache.py  test_cache_integration.py  test_comprasgov_source.py  test_concurrency.py  test_config.py  test_dependencies.py  test_excel.py  test_filter.py  test_filter_normalized.py  test_integration_ci.py  test_job_store.py  test_jwt.py  test_keyword_redundancy.py  test_large_volume.py  test_llm.py  test_llm_fallback.py  test_load.py  test_main.py  test_module_imports.py  test_multi_word.py  test_orchestrator.py  test_pagination.py  test_pncp_client.py  test_pncp_integration.py  test_pncp_source.py  test_querido_diario_source.py  test_redis_job_store.py  test_resilience.py  test_schemas.py  test_se001_search_terms.py  test_sectors.py  test_security.py  test_sources_base.py  test_sources_config.py  test_stemming.py  test_story4.py  (+7 more)
backend/tests/benchmark/: test_golden_suite.py
(+293 files in other folders)
